--- a/index.html
+++ b/index.html
@@ -63,38 +63,26 @@ textarea {
   flex: 1;
 }
 
+.checkbox-row {
+  display: flex;
+  align-items: center;
+  margin-top: 10px;
+}
+
+.checkbox-row input {
+  margin-left: auto;
+  transform: scale(1.3);
+}
+
 canvas {
   border: 1px solid #000;
   height: 150px;
   background: #fff;
 }
 
-.checkbox {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin-top: 10px;
-  padding-bottom: 6px;
-  border-bottom: 1px dotted #ccc;
-}
-
-.checkbox span {
-  flex: 1;
-  padding-right: 15px;
-}
-
-.checkbox input {
-  width: 22px;
-  height: 22px;
-}
-
-.signature-block {
-  margin-top: 20px;
-}
-
 button {
   margin-top: 30px;
-  padding: 14px;
+  padding: 15px;
   width: 100%;
   font-size: 16px;
   cursor: pointer;
@@ -124,9 +112,9 @@ button {
 <input type="tel">
 
 <label>Megbízott</label>
-<input type="text" readonly value="Budai Tamás e.v. | Adószám: 69528279-1-43 | Nyilvántartási szám: 53314194">
+<input type="text" value="Budai Tamás e.v. | Adószám: 69528279-1-43 | Nyilvántartási szám: 53314194" readonly>
 
-<label>Állat adatai</label>
+<label>Állat fajtája</label>
 <select id="allatFajta">
   <option value="">Válasszon</option>
   <option>Kutya</option>
@@ -141,7 +129,7 @@ button {
 
 <div class="row">
   <div>
-    <label>Név</label>
+    <label>Állat neve</label>
     <input type="text">
   </div>
   <div>
@@ -165,15 +153,9 @@ button {
   </div>
 </div>
 
-<label>Található-e implantátum (chipen kívül, fém, orvosi eszköz)?</label>
-<div class="checkbox">
-  <span>Igen</span>
-  <input type="checkbox" class="implant">
-</div>
-<div class="checkbox">
-  <span>Nem</span>
-  <input type="checkbox" class="implant">
-</div>
+<label>Található-e implantátum az állat testében?</label>
+<div class="checkbox-row"><span>Igen</span><input type="checkbox" class="implant"></div>
+<div class="checkbox-row"><span>Nem</span><input type="checkbox" class="implant"></div>
 
 <label>Milyen urna?</label>
 <input type="text">
@@ -185,14 +167,8 @@ button {
 </select>
 
 <label>Fizetés módja</label>
-<div class="checkbox">
-  <span>Készpénz</span>
-  <input type="checkbox">
-</div>
-<div class="checkbox">
-  <span>Átutalás (egy összegben)</span>
-  <input type="checkbox">
-</div>
+<div class="checkbox-row"><span>Készpénz</span><input type="checkbox"></div>
+<div class="checkbox-row"><span>Átutalás (egy összegben)</span><input type="checkbox"></div>
 
 <label>Elszállításnál fizetett összeg (Ft)</label>
 <input type="number">
@@ -200,18 +176,15 @@ button {
 <label>Visszaszállításnál fizetendő összeg (Ft)</label>
 <input type="number">
 
-<div class="checkbox">
-  <span>A kisállattal együtt átvett pokróc, nyakörv stb. megsemmisítésre kerül.</span>
+<div class="checkbox-row">
+  <span>Átvett pokróc, nyakörv stb. megsemmisítésre kerül</span>
   <input type="checkbox">
 </div>
 
-<div class="checkbox">
+<div class="checkbox-row">
   <span>Hozzájárulok személyes adataim kezeléséhez</span>
   <input type="checkbox" required>
 </div>
-
-<label>Hol találta hirdetésünket?</label>
-<input type="text">
 
 <label>Megjegyzés</label>
 <textarea></textarea>
@@ -227,6 +200,7 @@ button {
 </div>
 
 <script>
+// dátum + sorszám
 const d = new Date();
 const ds = `${d.getFullYear()}-${String(d.getMonth()+1).padStart(2,'0')}-${String(d.getDate()).padStart(2,'0')}`;
 datum.innerText = ds.replaceAll("-", ".");
@@ -234,62 +208,54 @@ let c = localStorage.getItem("erk") || 0;
 localStorage.setItem("erk", ++c);
 erkszam.innerText = `${ds}-${String(c).padStart(4,"0")}`;
 
-allatFajta.onchange = e => egyebAllat.style.display = e.target.value==="Egyéb" ? "block" : "none";
+// egyéb állat
+allatFajta.onchange = e => {
+  document.getElementById("egyebAllat").style.display =
+    e.target.value === "Egyéb" ? "block" : "none";
+};
 
-document.querySelectorAll(".implant").forEach(cb=>{
-  cb.onchange = ()=>document.querySelectorAll(".implant").forEach(o=>{
-    if(o!==cb) o.checked=false;
-  });
+// implantátum checkbox kizárás
+document.querySelectorAll(".implant").forEach(cb => {
+  cb.onchange = () => {
+    document.querySelectorAll(".implant").forEach(o => {
+      if (o !== cb) o.checked = false;
+    });
+  };
 });
 
+// aláírás
 const canvas = document.getElementById("signUser");
 const ctx = canvas.getContext("2d");
 canvas.width = canvas.offsetWidth;
 canvas.height = 150;
-let draw=false;
+let draw = false;
 
-function pos(e){
-  const r=canvas.getBoundingClientRect();
-  return e.touches
-    ? {x:e.touches[0].clientX-r.left,y:e.touches[0].clientY-r.top}
-    : {x:e.clientX-r.left,y:e.clientY-r.top};
-}
+canvas.onmousedown = e => { draw = true; ctx.moveTo(e.offsetX, e.offsetY); };
+canvas.onmousemove = e => { if(draw){ ctx.lineTo(e.offsetX,e.offsetY); ctx.stroke(); } };
+canvas.onmouseup = () => draw = false;
 
-["mousedown","touchstart"].forEach(ev=>canvas.addEventListener(ev,e=>{
-  draw=true; const p=pos(e); ctx.beginPath(); ctx.moveTo(p.x,p.y);
-}));
-["mousemove","touchmove"].forEach(ev=>canvas.addEventListener(ev,e=>{
-  if(!draw)return; const p=pos(e);
-  ctx.lineWidth=2; ctx.lineCap="round";
-  ctx.lineTo(p.x,p.y); ctx.stroke();
-}));
-["mouseup","touchend","mouseleave"].forEach(ev=>canvas.addEventListener(ev,()=>{
-  draw=false; ctx.beginPath();
-}));
-
+// fájlnév
 function clean(str){
-  return str.normalize("NFD").replace(/[\u0300-\u036f]/g,"").replace(/[^a-z0-9]+/gi,"_");
+  return str.normalize("NFD").replace(/[\u0300-\u036f]/g,"").replace(/[^a-zA-Z0-9]+/g,"_");
 }
 
+// PDF + email
 pdfBtn.onclick = async () => {
-  if(!ugyfelEmail.value) return alert("Email kötelező");
+  const cimText = document.getElementById("cim").value || "cim_nelkul";
+  const fileName = `azonosito_lap_${ds}_${clean(cimText)}.pdf`;
 
-  const fileName = `${ds}_${clean(cim.value || "cim_nelkul")}.pdf`;
-
-  const pdfBlob = await html2pdf().from(doc).set({
-    margin:10,
-    html2canvas:{ scale: window.innerWidth<768?0.65:0.85 },
-    jsPDF:{ unit:"mm", format:"a4", orientation:"portrait" }
+  const pdfBlob = await html2pdf().from(document.getElementById("doc")).set({
+    margin: 10,
+    html2canvas: { scale: 0.58 },
+    jsPDF: { unit: "mm", format: "a4" }
   }).outputPdf("blob");
 
   const fd = new FormData();
   fd.append("pdf", pdfBlob, fileName);
-  fd.append("ugyfelEmail", ugyfelEmail.value);
-  fd.append("gazdaNev", gazdaNev.value);
-  fd.append("cim", cim.value);
+  fd.append("ugyfelEmail", document.getElementById("ugyfelEmail").value);
 
-  await fetch("/send-pdf",{ method:"POST", body:fd });
-  alert("PDF elküldve");
+  await fetch("/send-pdf", { method: "POST", body: fd });
+  alert("PDF elkészült és elküldve");
 };
 </script>
 
